<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/menu_navi_home"
            android:title="@string/navi_home">
        </item>

        <item
            android:icon="@drawable/ic_account"
            android:id="@+id/menu_navi_account"
            android:title="@string/navi_account">
        </item>

        <item
            android:icon="@drawable/ic_delivery_gray"
            android:id="@+id/menu_navi_delivery"
            android:title="@string/navi_delivery"/>

        <item
            android:icon="@drawable/ic_delivery_food"
            android:id="@+id/menu_navi_order_table"
            android:title="@string/navi_reservation"/>

        <item
            android:icon="@drawable/ic_favorite"
            android:title="@string/navi_favorite"
            android:id="@+id/menu_navi_favorite"/>

        <item
            android:icon="@drawable/ic_history"
            android:title="@string/navi_history"
            android:id="@+id/menu_navi_history"/>

    </group>

    <item android:title="@string/group_help">
        <menu>
            <item android:title="Gửi phản hồi" android:icon="@drawable/ic_feedback"/>
            <item android:title="Chia sẻ" android:icon="@drawable/ic_share"/>
            <item android:title="Rate App" android:icon="@drawable/ic_rate_gray"/>
        </menu>
    </item>
</menu>