<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="@dimen/padding_5"
            android:layout_marginTop="@dimen/size_10"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:paddingTop="@dimen/padding_5"
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

                <TextView
                    android:visibility="gone"
                    android:textColor="@color/colorred"
                    android:id="@+id/tv_error_username"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:textSize="6sp"
                    android:text="Vui lòng nhập vào tên tài kkhoản"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="@dimen/padding_5"
                android:id="@+id/text_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:focusableInTouchMode="true"
                    android:focusedByDefault="false"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:id="@+id/edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass" />

                <TextView
                    android:visibility="gone"
                    android:textColor="@color/colorred"
                    android:id="@+id/tv_error_pass"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:textSize="6sp"
                    android:text="Vui lòng nhập vào tên tài kkhoản"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_login"
            app:cardBackgroundColor="@color/colorred"
            android:layout_marginTop="@dimen/size_20"
            android:layout_below="@+id/ll_auth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45">

            <TextView
                android:textColor="@color/colorwhite"
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/padding_15"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_login"
            android:text="@string/forget_pass"
            android:id="@+id/tv_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_login_social"
            android:layout_marginTop="@dimen/padding_15"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_forget_pass"
            android:text="Hoặc đăng nhập với"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="@dimen/padding_15"
            android:layout_below="@+id/tv_login_social"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45">

            <ImageView
                android:src="@drawable/ic_demo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@drawable/ic_demo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <ImageView
                android:src="@drawable/ic_demo"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>