<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_16"
    android:paddingRight="@dimen/padding_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_10"
        android:paddingBottom="@dimen/padding_5">

        <RelativeLayout
            android:id="@+id/rlt_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_10"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_5">

                    <EditText
                        android:id="@+id/edt_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/username"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_error_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_5"
                        android:text="Vui lòng nhập vào tên tài kkhoản"
                        android:textColor="@color/colorred"
                        android:textSize="6sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_5">

                    <EditText
                        android:id="@+id/edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/pass"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_error_pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_5"
                        android:text="Vui lòng nhập vào tên tài kkhoản"
                        android:textColor="@color/colorred"
                        android:textSize="6sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/rlt_confirm_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlt_regis"
            android:layout_marginTop="@dimen/padding_5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_5">

                <EditText
                    android:id="@+id/edt_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/first_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_error_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:text="Vui lòng nhập vào tên tài kkhoản"
                    android:textColor="@color/colorred"
                    android:textSize="6sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_5">

                <EditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/last_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_error_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:text="Vui lòng nhập vào tên tài kkhoản"
                    android:textColor="@color/colorred"
                    android:textSize="6sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_phone_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_5">

                <EditText
                    android:id="@+id/edt_phone_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_email"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_error_phone_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_5"
                    android:text="Vui lòng nhập vào tên tài kkhoản"
                    android:textColor="@color/colorred"
                    android:textSize="6sp" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:layout_marginTop="@dimen/size_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:paddingRight="@dimen/size_10"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="Nam"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />


                    <RadioButton
                        android:paddingRight="@dimen/size_10"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginLeft="@dimen/size_10"
                        android:text="Nữ"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </RadioGroup>

            <android.support.v7.widget.CardView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45"
                android:layout_below="@+id/ll_auth"
                android:layout_marginTop="@dimen/size_20"
                app:cardBackgroundColor="@color/colorred">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/resiger"
                    android:textColor="@color/colorwhite" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding_15"
                android:text="Khi đăng kí bạn đã chấp nhận điều khoản sử dụng"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>