<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:background="@color/color_red_press"
            android:id="@+id/rlt_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50">

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorwhite"
                android:text="@string/navi_reservation"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:gravity="center"
                android:id="@+id/tv_done"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorwhite"
                android:text="@string/done"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/img_back"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:src="@drawable/ic_back_white"
                android:layout_width="@dimen/size_50"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlt_detail_order"
            android:layout_marginTop="@dimen/size_10"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:layout_below="@+id/rlt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv"
                android:textColor="@color/colorblack"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="Chi tiết đăt chỗ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Thời gian: "
                android:id="@+id/tv2"
                android:layout_below="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_time_order"
                android:text="10/10/2017"
                android:layout_marginLeft="@dimen/size_10"
                android:layout_toRightOf="@id/tv2"
                android:layout_below="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="Số người: "
                android:layout_below="@+id/tv_time_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_number_of_people"
                android:text="5 người"
                android:layout_marginLeft="@dimen/size_10"
                android:layout_toRightOf="@id/tv2"
                android:layout_below="@+id/tv_time_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_note"
                android:textSize="14sp"
                android:padding="@dimen/size_5"
                android:background="@drawable/bg_note"
                android:gravity="top"
                android:hint="Ghi chú"
                android:layout_marginTop="@dimen/size_10"
                android:layout_below="@+id/tv_number_of_people"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlt_detail_cus"
            android:layout_marginTop="@dimen/size_15"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:layout_below="@+id/rlt_detail_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv3"
                android:textColor="@color/colorblack"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edt_name_cus"
                android:textSize="14sp"
                android:padding="@dimen/size_5"
                android:background="@drawable/bg_note"
                android:gravity="center_vertical"
                android:hint="Tên"
                android:layout_marginTop="@dimen/size_10"
                android:layout_below="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50" />

            <EditText
                android:id="@+id/edt_phone_cus"
                android:textSize="14sp"
                android:padding="@dimen/size_5"
                android:background="@drawable/bg_note"
                android:gravity="center_vertical"
                android:hint="Số điện thoại"
                android:layout_marginTop="@dimen/size_10"
                android:layout_below="@+id/edt_name_cus"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_order_table"
            android:drawableLeft="@drawable/ic_delivery_white"
            android:layout_marginBottom="@dimen/size_10"
            android:layout_marginTop="@dimen/size_15"
            android:textSize="18sp"
            android:textColor="@color/colorwhite"
            android:gravity="center"
            android:text="@string/order_table"
            android:layout_marginRight="@dimen/padding_16"
            android:layout_marginLeft="@dimen/padding_16"
            android:layout_below="@+id/rlt_detail_cus"
            android:background="@drawable/bg_order_table"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>